refactor. 보일러플레이트·데드코드 제거
- TradingRecord: 수동 getter/생성자 → record로 대체
- KistaAdapter: UriComponentsBuilder → baseUrl + path 단순 연결
- TelegramAdapter: collect(Collectors.toList()) → .toList()
- FandingScraperAdapter: validate() contextMsg 고정값 파라미터 인라인화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>